# zcash-hw-wallet-esp32

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
components/libzcash-orchard-c/: CMakeLists.txt  platform_rng.c
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  led_status.c  led_status.h  main.c  usb_transport.c  usb_transport.h  user_input.c  user_input.h  wallet.c  wallet.h
tools/: hwp_ping.py  hwp_test.py
